<resources>
    <string name="app_name">PMD_AIProject</string>
    <string name="generar_imagen_a_partir_de_texto">Generar imagen a partir de texto</string>
    <string name="escriba_una_descripci_n_detallada">Escriba una descripción detallada</string>
    <string name="generar_imagen">Generar imagen</string>
    <string name="generar_imagen_a_partir_de_una_imagen">Generar imagen a partir de una imagen</string>
    <string name="generar_imagen_img2img">Generar imagen</string>
    <string name="cargar_imagen">Cargar imagen</string>
    <string name="textview">TextView</string>
    <string name="nombre">Nombre</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="recordarme">Recordarme</string>
    <string name="reg_strate">Regístrate</string>
    <string name="pedir_por_texto">Pedir por texto</string>
    <string name="pedir_por_imagen">Pedir por Imagen</string>
    <string name="historial_de_imagenes">Historial de imagenes</string>
    <string name="elija_m_todo_para_recibir_su_imagen_artificialmente_creada">Elija método para recibir su imagen artificialmente creada.</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="register_contrase_a">Contraseña</string>
    <string name="repita_la_contrase_a">Repita la contraseña</string>
    <string name="registrarse">Registrarse</string>
</resources>