<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/btn_return_fromRegister"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:clickable="true"
      app:backgroundTint="#DDD7D7"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.045"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.023"
      app:srcCompat="@android:drawable/ic_media_rew" />

  <EditText
      android:id="@+id/txt_register_name"
      android:layout_width="233dp"
      android:layout_height="62dp"
      android:ems="10"
      android:hint="@string/nombre_de_usuario"
      android:inputType="textPersonName"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.236" />

  <EditText
      android:id="@+id/txt_register_password"
      android:layout_width="233dp"
      android:layout_height="62dp"
      android:ems="10"
      android:hint="@string/register_contrase_a"
      android:inputType="textPassword"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txt_register_name"
      app:layout_constraintVertical_bias="0.084" />

  <EditText
      android:id="@+id/txt_register_repeat_password"
      android:layout_width="233dp"
      android:layout_height="62dp"
      android:ems="10"
      android:hint="@string/repita_la_contrase_a"
      android:inputType="textPassword"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/txt_register_password"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/txt_register_password"
      app:layout_constraintTop_toBottomOf="@+id/txt_register_password"
      app:layout_constraintVertical_bias="0.084" />

  <Button
      android:id="@+id/btn_register"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/registrarse"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txt_register_repeat_password"
      app:layout_constraintVertical_bias="0.194" />

</androidx.constraintlayout.widget.ConstraintLayout>