<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/btn_menu_pedir_texto"
        android:layout_width="219dp"
        android:layout_height="99dp"
        android:backgroundTint="#101010"
        android:text="@string/pedir_por_texto"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#000000"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <Button
        android:id="@+id/btn_menu_pedir_img"
        android:layout_width="228dp"
        android:layout_height="98dp"
        android:backgroundTint="#000000"
        android:text="@string/pedir_por_imagen"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_menu_pedir_texto"
        app:layout_constraintVertical_bias="0.105" />

    <Button
        android:id="@+id/btn_menu_historial"
        android:layout_width="228dp"
        android:layout_height="98dp"
        android:backgroundTint="#000000"
        android:text="@string/historial_de_imagenes"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_menu_pedir_img"
        app:layout_constraintVertical_bias="0.193" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_return_fromMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="#DDD7D7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:rippleColor="#FAFAFA"
        app:srcCompat="@android:drawable/ic_media_rew" />

    <TextView
        android:id="@+id/txt_menu_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elija_m_todo_para_recibir_su_imagen_artificialmente_creada"
        app:layout_constraintBottom_toTopOf="@+id/btn_menu_pedir_texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>